==> khofesh/stm32-projects/nucleo-l552ze-q/006_dfrobot_vl53l3cx_it/Core/Src/vl53lx_platform.c <==

// SPDX-License-Identifier: GPL-2.0+ OR BSD-3-Clause
/******************************************************************************
 * Copyright (c) 2020, STMicroelectronics - All Rights Reserved

 This file is part of VL53LX and is dual licensed,
 either GPL-2.0+
 or 'BSD 3-clause "New" or "Revised" License' , at your option.
 ******************************************************************************
 */





#include <stdio.h>
#include <stdint.h>
#include <string.h>



#include "vl53lx_platform.h"
#include <vl53lx_platform_log.h>
#include "main.h"

/* GPIO definitions */
#define VL53LX_XSHUT_PORT   GPIOA
#define VL53LX_XSHUT_PIN    GPIO_PIN_2

#define I2C_TIME_OUT_BASE   10
#define I2C_TIME_OUT_BYTE   1

uint8_t _I2CBuffer[256];

/* I2C Interrupt Mode Variables */
typedef enum {
    I2C_STATE_READY = 0,
    I2C_STATE_BUSY_TX,
    I2C_STATE_BUSY_RX,
    I2C_STATE_ERROR
} I2C_State_t;

volatile I2C_State_t i2c_state = I2C_STATE_READY;
volatile HAL_StatusTypeDef i2c_result = HAL_OK;

/* Helper I2C functions - Interrupt Mode */
int _I2CWrite(VL53LX_Dev_t *pdev, uint8_t *pdata, uint32_t count) {
    HAL_StatusTypeDef status;
    uint32_t timeout = I2C_TIME_OUT_BASE + count * I2C_TIME_OUT_BYTE;
    uint32_t tickstart = HAL_GetTick();
    
    /* Wait for I2C to be ready */
    while (i2c_state != I2C_STATE_READY) {
        if ((HAL_GetTick() - tickstart) > timeout) {
            return HAL_TIMEOUT;
        }
    }
    
    /* Set state to busy */
    i2c_state = I2C_STATE_BUSY_TX;
    i2c_result = HAL_OK;
    
    /* Start interrupt-based transmission */
    status = HAL_I2C_Master_Transmit_IT(pdev->I2cHandle, pdev->I2cDevAddr, pdata, count);
    
    if (status != HAL_OK) {
        i2c_state = I2C_STATE_READY;
        return status;
    }
    
    /* Wait for transmission to complete */
    tickstart = HAL_GetTick();
    while (i2c_state == I2C_STATE_BUSY_TX) {
        if ((HAL_GetTick() - tickstart) > timeout) {
            i2c_state = I2C_STATE_READY;
            return HAL_TIMEOUT;
        }
    }
    
    /* Check if error occurred */
    if (i2c_state == I2C_STATE_ERROR) {
        i2c_state = I2C_STATE_READY;
        return HAL_ERROR;
    }
    
    return i2c_result;
}

int _I2CRead(VL53LX_Dev_t *pdev, uint8_t *pdata, uint32_t count) {
    HAL_StatusTypeDef status;
    uint32_t timeout = I2C_TIME_OUT_BASE + count * I2C_TIME_OUT_BYTE;
    uint32_t tickstart = HAL_GetTick();
    
    /* Wait for I2C to be ready */
    while (i2c_state != I2C_STATE_READY) {
        if ((HAL_GetTick() - tickstart) > timeout) {
            return HAL_TIMEOUT;
        }
    }
    
    /* Set state to busy */
    i2c_state = I2C_STATE_BUSY_RX;
    i2c_result = HAL_OK;
    
    /* Start interrupt-based reception */
    status = HAL_I2C_Master_Receive_IT(pdev->I2cHandle, pdev->I2cDevAddr | 1, pdata, count);
    
    if (status != HAL_OK) {
        i2c_state = I2C_STATE_READY;
        return status;
    }
    
    /* Wait for reception to complete */
    tickstart = HAL_GetTick();
    while (i2c_state == I2C_STATE_BUSY_RX) {
        if ((HAL_GetTick() - tickstart) > timeout) {
            i2c_state = I2C_STATE_READY;
            return HAL_TIMEOUT;
        }
    }
    
    /* Check if error occurred */
    if (i2c_state == I2C_STATE_ERROR) {
        i2c_state = I2C_STATE_READY;
        return HAL_ERROR;
    }
    
    return i2c_result;
}





#define trace_print(level, ...) \
	_LOG_TRACE_PRINT(VL53LX_TRACE_MODULE_PLATFORM, \
	level, VL53LX_TRACE_FUNCTION_NONE, ##__VA_ARGS__)

#define trace_i2c(...) \
	_LOG_TRACE_PRINT(VL53LX_TRACE_MODULE_NONE, \
	VL53LX_TRACE_LEVEL_NONE, VL53LX_TRACE_FUNCTION_I2C, ##__VA_ARGS__)


VL53LX_Error VL53LX_CommsInitialise(
	VL53LX_Dev_t *pdev,
	uint8_t       comms_type,
	uint16_t      comms_speed_khz)
{
	(void)pdev;
	(void)comms_type;
	(void)comms_speed_khz;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error VL53LX_CommsClose(
	VL53LX_Dev_t *pdev)
{
	(void)pdev;
	return VL53LX_ERROR_NONE;
}



VL53LX_Error VL53LX_WriteMulti(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint8_t      *pdata,
	uint32_t      count)
{
    int status_int;
    VL53LX_Error Status = VL53LX_ERROR_NONE;
    
    if (count > sizeof(_I2CBuffer) - 1) {
        return VL53LX_ERROR_INVALID_PARAMS;
    }
    
    _I2CBuffer[0] = index >> 8;
    _I2CBuffer[1] = index & 0xFF;
    memcpy(&_I2CBuffer[2], pdata, count);
    
    status_int = _I2CWrite(pdev, _I2CBuffer, count + 2);
    if (status_int != 0) {
        Status = VL53LX_ERROR_CONTROL_INTERFACE;
    }
    
    return Status;
}


VL53LX_Error VL53LX_ReadMulti(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint8_t      *pdata,
	uint32_t      count)
{
    VL53LX_Error Status = VL53LX_ERROR_NONE;
    int32_t status_int;

    _I2CBuffer[0] = index >> 8;
    _I2CBuffer[1] = index & 0xFF;
    
    status_int = _I2CWrite(pdev, _I2CBuffer, 2);
    if (status_int != 0) {
        Status = VL53LX_ERROR_CONTROL_INTERFACE;
        goto done;
    }
    
    status_int = _I2CRead(pdev, pdata, count);
    if (status_int != 0) {
        Status = VL53LX_ERROR_CONTROL_INTERFACE;
    }
    
done:
    return Status;
}


VL53LX_Error VL53LX_WrByte(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint8_t       VL53LX_p_003)
{
	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint8_t  buffer[1];


	buffer[0] = (uint8_t)(VL53LX_p_003);

	status = VL53LX_WriteMulti(pdev, index, buffer, 1);

	return status;
}


VL53LX_Error VL53LX_WrWord(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint16_t      VL53LX_p_003)
{
	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint8_t  buffer[2];


	buffer[0] = (uint8_t)(VL53LX_p_003 >> 8);
	buffer[1] = (uint8_t)(VL53LX_p_003 &  0x00FF);

	status = VL53LX_WriteMulti(pdev, index, buffer, VL53LX_BYTES_PER_WORD);

	return status;
}


VL53LX_Error VL53LX_WrDWord(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint32_t      VL53LX_p_003)
{
	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint8_t  buffer[4];


	buffer[0] = (uint8_t) (VL53LX_p_003 >> 24);
	buffer[1] = (uint8_t)((VL53LX_p_003 &  0x00FF0000) >> 16);
	buffer[2] = (uint8_t)((VL53LX_p_003 &  0x0000FF00) >> 8);
	buffer[3] = (uint8_t) (VL53LX_p_003 &  0x000000FF);

	status = VL53LX_WriteMulti(pdev, index, buffer, VL53LX_BYTES_PER_DWORD);

	return status;
}


VL53LX_Error VL53LX_RdByte(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint8_t      *pdata)
{
	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint8_t  buffer[1];

	status = VL53LX_ReadMulti(pdev, index, buffer, 1);

	*pdata = buffer[0];

	return status;
}


VL53LX_Error VL53LX_RdWord(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint16_t     *pdata)
{
	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint8_t  buffer[2];

	status = VL53LX_ReadMulti(
					pdev,
					index,
					buffer,
					VL53LX_BYTES_PER_WORD);

	*pdata = (uint16_t)(((uint16_t)(buffer[0])<<8) + (uint16_t)buffer[1]);

	return status;
}


VL53LX_Error VL53LX_RdDWord(
	VL53LX_Dev_t *pdev,
	uint16_t      index,
	uint32_t     *pdata)
{
	VL53LX_Error status = VL53LX_ERROR_NONE;
	uint8_t  buffer[4];

	status = VL53LX_ReadMulti(
					pdev,
					index,
					buffer,
					VL53LX_BYTES_PER_DWORD);

	*pdata = ((uint32_t)buffer[0]<<24) + ((uint32_t)buffer[1]<<16) + ((uint32_t)buffer[2]<<8) + (uint32_t)buffer[3];

	return status;
}



VL53LX_Error VL53LX_WaitUs(
	VL53LX_Dev_t *pdev,
	int32_t       wait_us)
{
	(void)pdev;
	HAL_Delay(wait_us / 1000);
	return VL53LX_ERROR_NONE;
}


VL53LX_Error VL53LX_WaitMs(
	VL53LX_Dev_t *pdev,
	int32_t       wait_ms)
{
	(void)pdev;
	HAL_Delay(wait_ms);
	return VL53LX_ERROR_NONE;
}



VL53LX_Error VL53LX_GetTimerFrequency(int32_t *ptimer_freq_hz)
{
	*ptimer_freq_hz = 1000;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error VL53LX_GetTimerValue(int32_t *ptimer_count)
{
	*ptimer_count = (int32_t)HAL_GetTick();
	return VL53LX_ERROR_NONE;
}




VL53LX_Error VL53LX_GpioSetMode(uint8_t pin, uint8_t mode)
{
	(void)pin;
	(void)mode;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioSetValue(uint8_t pin, uint8_t value)
{
	(void)pin;
	(void)value;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioGetValue(uint8_t pin, uint8_t *pvalue)
{
	(void)pin;
	*pvalue = 0;
	return VL53LX_ERROR_NONE;
}



VL53LX_Error  VL53LX_GpioXshutdown(uint8_t value)
{
	HAL_GPIO_WritePin(VL53LX_XSHUT_PORT, VL53LX_XSHUT_PIN, value ? GPIO_PIN_SET : GPIO_PIN_RESET);
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioCommsSelect(uint8_t value)
{
	(void)value;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioPowerEnable(uint8_t value)
{
	(void)value;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioInterruptEnable(void (*function)(void), uint8_t edge_type)
{
	(void)function;
	(void)edge_type;
	return VL53LX_ERROR_NONE;
}


VL53LX_Error  VL53LX_GpioInterruptDisable(void)
{
	return VL53LX_ERROR_NONE;
}


VL53LX_Error VL53LX_GetTickCount(
		VL53LX_Dev_t *pdev,
		uint32_t *ptick_count_ms)
{



	(void)pdev;
	*ptick_count_ms = HAL_GetTick();
	
	trace_print(
	VL53LX_TRACE_LEVEL_DEBUG,
	"VL53LX_GetTickCount() = %5u ms;\n",
	*ptick_count_ms);

	return VL53LX_ERROR_NONE;

}


VL53LX_Error VL53LX_WaitValueMaskEx(
	VL53LX_Dev_t *pdev,
	uint32_t      timeout_ms,
	uint16_t      index,
	uint8_t       value,
	uint8_t       mask,
	uint32_t      poll_delay_ms)
{


	VL53LX_Error status         = VL53LX_ERROR_NONE;
	uint32_t     start_time_ms   = 0;
	uint32_t     current_time_ms = 0;
	uint8_t      byte_value      = 0;
	uint8_t      found           = 0;
#ifdef VL53LX_LOG_ENABLE
	uint32_t     trace_functions = 0;
#endif



#ifdef VL53LX_LOG_ENABLE

	trace_i2c("WaitValueMaskEx(%5d, 0x%04X, 0x%02X, 0x%02X, %5d);\n",
		timeout_ms, index, value, mask, poll_delay_ms);
#endif



	VL53LX_GetTickCount(pdev, &start_time_ms);
	pdev->new_data_ready_poll_duration_ms = 0;



#ifdef VL53LX_LOG_ENABLE
	trace_functions = _LOG_GET_TRACE_FUNCTIONS();
#endif
	_LOG_SET_TRACE_FUNCTIONS(VL53LX_TRACE_FUNCTION_NONE);



	while ((status == VL53LX_ERROR_NONE) &&
		   (pdev->new_data_ready_poll_duration_ms < timeout_ms) &&
		   (found == 0))
	{
		status = VL53LX_WaitMs(
					pdev,
					poll_delay_ms);
		status = VL53LX_RdByte(
						pdev,
						index,
						&byte_value);

		if ((byte_value & mask) == value)
		{
			found = 1;
		}




		VL53LX_GetTickCount(pdev, &current_time_ms);
		pdev->new_data_ready_poll_duration_ms = current_time_ms - start_time_ms;
	}

#ifdef VL53LX_LOG_ENABLE
	_LOG_SET_TRACE_FUNCTIONS(trace_functions);
#endif
	if (found == 0 && status == VL53LX_ERROR_NONE)
		status = VL53LX_ERROR_TIME_OUT;

	return status;
}
